<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.detail.movie.DetailMovieActivity">
    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:contentDescription="@string/desc_img"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/fav_menu"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_banner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="6dp"
        android:text="@string/durasi_movie"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_time"
        app:layout_constraintStart_toEndOf="@+id/iv_banner"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:drawablePadding="6dp"
        android:text="@string/rating"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_star"
        app:layout_constraintBottom_toTopOf="@+id/tv_genre"
        app:layout_constraintStart_toEndOf="@+id/tv_duration" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:maxLines="2"
        android:text="@string/genre"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iv_banner"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sinopsisTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner" />

    <TextView
        android:id="@+id/tv_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sinopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_trailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watch_trailer"
        android:background="@drawable/bg_button"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>