<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_fav"
        android:title="@string/favofite"
        android:icon="@drawable/ic_baseline_favorite_24_red"
        app:showAsAction="always"/>
</menu>